--- a/jetsencloud/src/main/res/layout/activity_jetsen_prepareresource.xml
+++ b/jetsencloud/src/main/res/layout/activity_jetsen_prepareresource.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_preparesource"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".JetsenPrepareResourceActivity">
 
@@ -77,7 +79,9 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
-                        android:text="华东师大版" />
+                        android:text="华东师大版"
+                        android:textColor="@color/common_title_bg"
+                        android:textSize="@dimen/motion_position_text_size"/>
 
                     <ImageView
                         android:id="@+id/img_booklist"
@@ -92,8 +96,8 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/colorTitle" />
+                    android:layout_height="1px"
+                    android:background="@color/motion_detail_position_text" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/fileRv"
@@ -102,9 +106,9 @@
             </LinearLayout>
 
             <View
-                android:layout_width="1dp"
+                android:layout_width="1px"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimaryDark"></View>
+                android:background="@color/motion_detail_position_text"></View>
 
             <LinearLayout
                 android:layout_width="0dp"
