--- a/jetsencloud/src/main/res/layout/activity_jetsen_resource.xml
+++ b/jetsencloud/src/main/res/layout/activity_jetsen_resource.xml
@@ -69,7 +69,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="0.1dp"
+                    android:layout_height="1px"
                     android:background="@color/motion_detail_position_text" />
 
                 <android.support.v7.widget.RecyclerView
@@ -79,7 +79,7 @@
             </LinearLayout>
 
             <View
-                android:layout_width="0.1dp"
+                android:layout_width="1px"
                 android:layout_height="match_parent"
                 android:background="@color/motion_detail_position_text"></View>
 
@@ -93,7 +93,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="0.1dp"
+                    android:layout_height="1px"
                     android:background="@color/motion_detail_position_text" />
 
                 <com.chanlin.jetsencloud.view.CustomViewPager
