--- a/jetsencloud/src/main/res/layout/item_question_content.xml
+++ b/jetsencloud/src/main/res/layout/item_question_content.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/dp_4"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="@dimen/dp_4">
 
     <ImageView
         android:id="@+id/type_icon"
@@ -13,26 +13,106 @@
         android:layout_height="30dp"
         android:layout_marginLeft="8dp" />
 
-   <!-- <WebView
-        android:id="@+id/web_title"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="8dp"
-        android:layout_weight="1"/>-->
-    <TextView
-        android:id="@+id/tv_file_title"
-        android:layout_width="0dp"
+    <!-- <WebView
+         android:id="@+id/web_title"
+         android:layout_width="0dp"
+         android:layout_height="match_parent"
+         android:layout_marginLeft="8dp"
+         android:layout_weight="1"/>-->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_weight="1"
-        android:textColor="@color/colorTitle"
-        android:textSize="14sp"
-        tools:text=".data" />
-    <ImageView
-        android:id="@+id/iv_file_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_weight="1"/>
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_file_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:textColor="@color/colorTitle"
+                android:textSize="14sp"
+                tools:text=".data" />
+
+            <ImageView
+                android:id="@+id/iv_file_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_30">
+
+            <TextView
+                android:id="@+id/tv_pid_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:textColor="@color/colorTitle"
+                android:textSize="14sp"
+                tools:text=".data" />
+
+            <ImageView
+                android:id="@+id/iv_pid_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_30">
+
+            <TextView
+                android:id="@+id/tv_parse"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:textColor="@color/colorTitle"
+                android:textSize="14sp"
+                tools:text=".data" />
+
+            <ImageView
+                android:id="@+id/iv_parse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_30">
+
+            <TextView
+                android:id="@+id/tv_parse_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:textColor="@color/colorTitle"
+                android:textSize="14sp"
+                tools:text=".data" />
+
+            <ImageView
+                android:id="@+id/iv_parse_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
