--- a/jetsencloud/src/main/res/layout/activity_jetsen_sendexercise.xml
+++ b/jetsencloud/src/main/res/layout/activity_jetsen_sendexercise.xml
@@ -117,16 +117,11 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <GridView
+                <android.support.v7.widget.RecyclerView
                     android:id="@+id/gv_question_period_list"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:columnWidth="88dp"
-                    android:listSelector="@color/colorTitle"
-                    android:numColumns="auto_fit"
-                    android:scrollbars="none"
-                    android:padding="@dimen/dp_5">
-                </GridView>
+                    android:scrollbars="none"/>
 
                 <View
                     android:layout_width="match_parent"
