--- a/jetsencloud/src/main/res/layout/item_question_period_grid_view.xml
+++ b/jetsencloud/src/main/res/layout/item_question_period_grid_view.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="100dp"
+    android:layout_height="40dp"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_course_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:padding="5dp">
+        android:gravity="center_vertical"
+        android:text="课程"
+        android:textColor="@color/common_title_bg"
+        android:textSize="@dimen/motion_position_text_size"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-
-
-        <TextView
-            android:id="@+id/tv_course_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:text="课程"
-            android:textColor="@color/common_title_bg"
-            android:textSize="@dimen/motion_position_text_size" />
-    </LinearLayout>
-</LinearLayout>
+    <ImageView
+        android:id="@+id/view_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@drawable/tab_selected_pressed_holo"
+        android:layout_alignParentBottom="true" />
+</RelativeLayout>
