--- a/jetsencloud/src/main/res/layout/activity_jetsen_main.xml
+++ b/jetsencloud/src/main/res/layout/activity_jetsen_main.xml
@@ -88,7 +88,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
         android:text="@string/sendexercise_title"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gv_course" />
 
@@ -99,7 +99,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
         android:text="@string/prepare_resource"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_sendexercise" />
 
