--- a/jetsencloud/src/main/res/layout/item_question_content.xml
+++ b/jetsencloud/src/main/res/layout/item_question_content.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_question_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
@@ -35,7 +36,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:textColor="@color/colorTitle"
-                android:textSize="14sp"
+                android:textSize="10sp"
                 tools:text=".data" />
 
             <ImageView
@@ -48,8 +49,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_30">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_pid_title"
@@ -58,7 +58,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:textColor="@color/colorTitle"
-                android:textSize="14sp"
+                android:textSize="10sp"
                 tools:text=".data" />
 
             <ImageView
@@ -71,8 +71,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_30">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_parse"
@@ -81,7 +80,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:textColor="@color/colorTitle"
-                android:textSize="14sp"
+                android:textSize="10sp"
                 tools:text=".data" />
 
             <ImageView
@@ -94,8 +93,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_30">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_parse_title"
@@ -104,7 +102,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:textColor="@color/colorTitle"
-                android:textSize="14sp"
+                android:textSize="10sp"
                 tools:text=".data" />
 
             <ImageView
