--- a/jetsencloud/src/main/res/values/colors.xml
+++ b/jetsencloud/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="motion_detail_position_text">#848484</color>
     <color name="translucence_gray">#4d000000</color>
+    <color name="background_gray">#DCDCDC</color>
 </resources>
