--- a/jetsencloud/src/main/res/layout/item_down_file.xml
+++ b/jetsencloud/src/main/res/layout/item_down_file.xml
@@ -29,7 +29,7 @@
     <ImageView
         android:id="@+id/down"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scaleType="center"
         android:layout_marginRight="@dimen/dp_10"
         android:src="@mipmap/img_download" />
