--- a/jetsencloud/src/main/res/layout/item_down_question.xml
+++ b/jetsencloud/src/main/res/layout/item_down_question.xml
@@ -22,7 +22,7 @@
     <ImageView
         android:id="@+id/down"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginRight="@dimen/dp_10"
         android:src="@mipmap/img_download" />
 </LinearLayout>
