--- a/jetsencloud/src/main/res/layout/item_file.xml
+++ b/jetsencloud/src/main/res/layout/item_file.xml
@@ -27,11 +27,11 @@
             android:textSize="14sp"
             tools:text=".data" />
 
-        <TextView
+        <!--<TextView
             android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:textSize="12sp" />
+            android:textSize="12sp" />-->
     </LinearLayout>
 </LinearLayout>
