--- a/jetsencloud/src/main/res/layout/fragment_question.xml
+++ b/jetsencloud/src/main/res/layout/fragment_question.xml
@@ -3,7 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+	<FrameLayout
+		android:id="@+id/fl_no_data"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:visibility="visible">
 
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:text="@string/no_questions" />
+	</FrameLayout>
 	<ListView
 		android:id="@+id/lv_question"
 		android:divider="@color/motion_detail_position_text"
