--- a/jetsencloud/src/main/res/layout/loading_dialog.xml
+++ b/jetsencloud/src/main/res/layout/loading_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="130dp"
-    android:layout_height="100dp"
+    android:layout_width="230dp"
+    android:layout_height="200dp"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -12,16 +12,18 @@
 
         <ImageView
             android:id="@+id/iv_loading_dialog"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-android:layout_centerHorizontal="true"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
+            android:layout_centerHorizontal="true"
             android:src="@mipmap/loading" />
         <TextView
             android:id="@+id/tv_msg"
+            android:layout_marginTop="@dimen/dp_10"
             android:layout_below="@id/iv_loading_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:textSize="@dimen/dp_20"
             android:text="loading"/>
 
     </RelativeLayout>
