--- a/jetsencloud/src/main/res/layout/fragment_resource.xml
+++ b/jetsencloud/src/main/res/layout/fragment_resource.xml
@@ -4,6 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <FrameLayout
+        android:id="@+id/fl_no_data"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/no_resources" />
+    </FrameLayout>
     <ListView
         android:id="@+id/lv_resource"
         android:divider="@color/motion_detail_position_text"
