--- a/jetsencloud/src/main/res/layout/activity_jetsen_prepareresource.xml
+++ b/jetsencloud/src/main/res/layout/activity_jetsen_prepareresource.xml
@@ -114,7 +114,13 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
-
+                <TextView
+                    android:id="@+id/no_download_resources"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:text="@string/no_download_resources" />
                 <ListView
                     android:id="@+id/resource_listview"
                     android:layout_width="match_parent"
