--- a/jetsencloud/src/main/res/layout/fragment_question.xml
+++ b/jetsencloud/src/main/res/layout/fragment_question.xml
@@ -20,6 +20,11 @@
 		android:divider="@color/motion_detail_position_text"
 		android:dividerHeight="1px"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"></ListView>
+		android:layout_height="wrap_content"></ListView>
 
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center"
+		android:text="@string/delete_and_download_agin" />
 </LinearLayout>
